First elements of Game of life ready.(Constructor, createBoard function)

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
 <body>
     <div class="flex-container">
-        <section id="board">
-        </section> 
+        <section id="board"></section>
         <section id="game-set">
             <button id="play">graj</button>
             <button id="pause">pauza</button>
